# LibraryService/src/main/java/com/neitex/library/controller/BookLeaseController.java
@@ -7,8 +7,8 @@ import java.util.List;
 import lombok.AllArgsConstructor;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -33,9 +33,15 @@ public class BookLeaseController {
   }
 
   @PreAuthorize("hasRole('EDITOR')")
-  @PatchMapping("/leases/{bookId}")
-  public BookLeaseResponseDTO updateBookLease(@PathVariable("bookId") Long bookId, @RequestBody
-  BookLeaseRequestDTO bookLeaseRequestDTO) {
-    return bookLeaseService.updateBookLease(bookId, bookLeaseRequestDTO);
+  @PostMapping("/leases/{bookId}/lease")
+  public BookLeaseResponseDTO leaseBook(@PathVariable("bookId") Long bookId,
+      @RequestBody BookLeaseRequestDTO bookLeaseRequestDTO) {
+    return bookLeaseService.leaseBook(bookId, bookLeaseRequestDTO);
+  }
+
+  @PreAuthorize("hasRole('EDITOR')")
+  @PostMapping("/leases/{bookId}/return")
+  public BookLeaseResponseDTO returnBook(@PathVariable("bookId") Long bookId) {
+    return bookLeaseService.returnBook(bookId);
   }
 }
